update assignment